--- a/team.html
+++ b/team.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Robotics And Circuits</title>
+    <link rel="icon" href="images/logo/hlogo.png" type="image">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/style2.css">
     <link rel="stylesheet" href="css/responsive.css">
@@ -55,132 +56,111 @@
 <!--start Board-->
 <section class="board">
   <div class="title textcenter">
-    <h1>Board 2020</h1>
+    <h1>Board 2021</h1>
   </div>
         <div class="member">
           <div class="member_img">
-             <img src="images/team/member1.jpeg">
+             <img src="images/team/ps.jpeg">
               <div class="social_media">
-              <a href="https://www.linkedin.com/in/titiksha-wagh"><i class="fa fa-linkedin"></i></a>
+              <a href="https://www.linkedin.com/in/parth-sirohi-908933169/"><i class="fa fa-linkedin"></i></a>
             </div>
           </div>
-          <h3>Titiksha Wagh</h3>
+          <h3>Parth Sirohi</h3>
           <h5>Chairperson</h5>
         </div>
 
         <div class="member">
            <div class="member_img">
-             <img src="images/team/member2.jpeg">
+            <img src="images/team/na.jpeg">
               <div class="social_media">
-              <a href="https://www.linkedin.com/in/khushal-kapoor-646171181/"><i class="fa fa-linkedin"></i></a>
+              <a href="https://www.linkedin.com/company/robotics-and-circuits"><i class="fa fa-linkedin"></i></a>
             </div>
           </div>
-          <h3>Khushal Kapoor</h3>
-          <h5>Team Manager</h5>
+          <h3>Nihaarika Agarwal</h3>
+          <h5>Vice Chairperson</h5>
       </div>
 
         <div class="member">
             <div class="member_img">
-             <img src="images/team/member3.jpg">
+              <img src="images/team/sd.jpeg">
               <div class="social_media">
-              <a href="https://www.linkedin.com/in/kartikeya-pandey-b5b9b3181/"><i class="fa fa-linkedin"></i></a>
+              <a href="https://www.linkedin.com/in/shreyas-daga-9214b219b/"><i class="fa fa-linkedin"></i></a>
             </div>
           </div>
-          <h3>Kartikeya Pandey</h3>
-          <h5>General Secretary</h5>
+          <h3>Shreyas Daga</h3>
+          <h5>Project Manager</h5>
       </div>
 
         <div class="member">
            <div class="member_img">
-             <img src="images/team/member4.jpg">
+            <img src="images/team/sa.jpeg">
               <div class="social_media">
-              <a href="https://www.linkedin.com/in/grissel-mathias-203391158/"><i class="fa fa-linkedin"></i></a>
+              <a href="https://www.linkedin.com/in/saloni-agarwal-7aa5821a7/"><i class="fa fa-linkedin"></i></a>
             </div>
           </div>
-          <h3>Grissel Mathias</h3>
-          <h5>Treasurer</h5>
+          <h3>Saloni Agarwal</h3>
+          <h5>Operations Manager</h5>
       </div>  
 
         <div class="member">
           <div class="member_img">
-             <img src="images/team/member5.jpg">
+            <img src="images/team/nt.jpeg">
               <div class="social_media">
-              <a href="https://www.linkedin.com/in/saransh-agrawal8899/"><i class="fa fa-linkedin"></i></a>
+              <a href="https://www.linkedin.com/company/robotics-and-circuits"><i class="fa fa-linkedin"></i></a>
             </div>
           </div>
-          <h3>Saransh Agarwal</h3>
+          <h3>Neil Tyrone</h3>
           <h5>Electronics Head</h5>
         </div>
 
         <div class="member">
           <div class="member_img">
-            <img src="images/team/member6.jpg">
+            <img src="images/team/codinghead.jpg">
              <div class="social_media">
-              <a href="https://www.linkedin.com/in/raloue/"><i class="fa fa-linkedin"></i></a>
+              <a href="https://www.linkedin.com/in/rushil-jhaveri-218a6016a/"><i class="fa fa-linkedin"></i></a>
             </div>
           </div>
-          <h3>Raloue Kapoor</h3>
+          <h3>Rushil Jhaveri</h3>
           <h5>Coding Head</h5>
         </div>
 
         <div class="member">
            <div class="member_img">
-             <img src="images/team/member7.jpg">
+            <img src="images/team/bj.jpeg">
               <div class="social_media">
               <a href="https://www.linkedin.com/company/robotics-and-circuits"><i class="fa fa-linkedin"></i></a>
             </div>
           </div>
-          <h3>Eeshan Chowdhary</h3>
+          <h3>Bhaavin Jogeshwar</h3>
           <h5>Mechanical Head</h5>
       </div>
 
         <div class="member">
            <div class="member_img">
-             <img src="images/team/member8.jpg">
+            <img src="images/team/ap.jpeg">
               <div class="social_media">
-              <a href="https://www.linkedin.com/in/gagan-j-50b6aa134/"><i class="fa fa-linkedin"></i></a>
+              <a href="https://www.linkedin.com/in/anant-pandey-4b73191b2/"><i class="fa fa-linkedin"></i></a>
             </div>
           </div>
-          <h3>JH Gagan</h3>
-          <h5>Research Head</h5>
+          <h3>Anant Pandey</h3>
+          <h5>Simulation Head</h5>
       </div>  
 
         <div class="member">
            <div class="member_img">
-             <img src="images/team/member9.jpg">
+            <img src="images/team/ag.jpeg">
               <div class="social_media">
-              <a href="https://www.linkedin.com/in/ammaralam221/"><i class="fa fa-linkedin"></i></a>
+              <a href="https://www.linkedin.com/in/ashwin-gopalakrishnan-31498318b/"><i class="fa fa-linkedin"></i></a>
             </div>
           </div>
-           <h3>Ammar Alam Malik</h3>
-          <h5>Advisory Board</h5>
+           <h3>Ashwin G</h3>
+          <h5>Management Head</h5>
       </div>  
+   </section>>
 
-      <div class="member">
-           <div class="member_img">
-             <img src="images/team/member10.jpg">
-              <div class="social_media">
-              <a href="https://www.linkedin.com/company/robotics-and-circuits"><i class="fa fa-linkedin"></i></a>
-            </div>
-          </div>
-          <h3>Tanyeem Saifi</h3>
-          <h5>Advisory Board</h5>
-      </div>  
-
-        <div class="member">
-           <div class="member_img">
-             <img src="images/team/member11.jpg">
-              <div class="social_media">
-              <a href="https://www.linkedin.com/in/vishnu-bhargav-82b419175/"><i class="fa fa-linkedin"></i></a>
-            </div>
-          </div>
-          <h3>Vishnu Bharghav</h3>
-          <h5>Advisory Board</h5>
-      </div>  
-</section>
 <!-- End Board-->
 
-<!-- 
+
 <section class="others">
   <div class="title textcenter">
     <h1>Team Members</h1>
@@ -193,13 +173,11 @@
           </div>
           <h5>Coding</h5>
           <ul>
-            <li>Member Name</li>
-            <li>member Name</li>
-            <li>Member Name</li>
-            <li>member Name</li>
-            <li>Member Name</li>
-            <li>Member Name</li>
-            <li>Member Name</li>
+            <li>Aravind Variyath</li>
+            <li>Yash Raj</li>
+            <li>Shailabh</li>
+            <li>Aditya Prabhu</li>
+            <li>Subhash Raja</li>
           </ul>
        </div>
        <div class="domains" >
@@ -208,12 +186,16 @@
           </div>
           <h5>Electronics</h5>
           <ul>
-            <li>Member Name</li>
-            <li>Member Name</li>
-            <li>member Name</li>
-            <li>Member Name</li>
-            <li>Member Name</li>
-            <li>member Name</li>
+            <li>Anusha GV</li>
+            <li>Niket Jain</li>
+            <li>Vishwajeet Kulkarni</li>
+            <li>Sakshi Goenka</li>
+            <li>Anirudh Bharadwaj</li>
+            <li>Abhishek Srinivas Rao</li>
+            <li>Yadav Ratnesh Ravikiran</li>
+            <li>Asher Antony Pinto </li>
+            <li> Jai Chhaya</li>
+
           </ul>
        </div>
        <div class="domains" >
@@ -222,10 +204,11 @@
           </div>
           <h5>Mechanical</h5>
           <ul>
-            <li>Member Name</li>
-            <li>member Name</li>
-            <li>Member Name</li>
-            <li>Member Name</li>
+            <li>Rishabh Dugar</li>
+            <li>Rohan Kumar</li>
+            <li>Shashank Singh</li>
+            <li>Hrithik P. Shetty </li>
+            <li>Sairaj Nayak </li>
           </ul>
        </div>
          <div class="domains" >
@@ -234,17 +217,148 @@
           </div>
           <h5>Management</h5>
           <ul>
-            <li>Member Name</li>
-            <li>Member Name</li>
-            <li>Member Name</li>
-            <li>Member Name</li>
+            <li>Arihant Jha</li>
+            <li>Guru Prakash</li>
+            <li>Kashish Miglani</li>
+            <li>Nishant Gupta</li>
+            <li>Goutham T S</li>
           </ul>
        </div>
         
      </div>
     </div>
 
-</section> -->
+</section> 
+
+
+ 
+ <!--start Board-->
+ <section class="board">
+   <div class="title textcenter">
+     <h1>Board 2020</h1>
+   </div>
+         <div class="member">
+           <div class="member_img">
+              <img src="images/team/member1.jpeg">
+               <div class="social_media">
+               <a href="https://www.linkedin.com/in/titiksha-wagh"><i class="fa fa-linkedin"></i></a>
+             </div>
+           </div>
+           <h3>Titiksha Wagh</h3>
+           <h5>Chairperson</h5>
+         </div>
+ 
+         <div class="member">
+            <div class="member_img">
+              <img src="images/team/member2.jpeg">
+               <div class="social_media">
+               <a href="https://www.linkedin.com/in/khushal-kapoor-646171181/"><i class="fa fa-linkedin"></i></a>
+             </div>
+           </div>
+           <h3>Khushal Kapoor</h3>
+           <h5>Team Manager</h5>
+       </div>
+ 
+         <div class="member">
+             <div class="member_img">
+              <img src="images/team/member3.jpg">
+               <div class="social_media">
+               <a href="https://www.linkedin.com/in/kartikeya-pandey-b5b9b3181/"><i class="fa fa-linkedin"></i></a>
+             </div>
+           </div>
+           <h3>Kartikeya Pandey</h3>
+           <h5>General Secretary</h5>
+       </div>
+ 
+         <div class="member">
+            <div class="member_img">
+              <img src="images/team/member4.jpg">
+               <div class="social_media">
+               <a href="https://www.linkedin.com/in/grissel-mathias-203391158/"><i class="fa fa-linkedin"></i></a>
+             </div>
+           </div>
+           <h3>Grissel Mathias</h3>
+           <h5>Treasurer</h5>
+       </div>  
+ 
+         <div class="member">
+           <div class="member_img">
+              <img src="images/team/member5.jpg">
+               <div class="social_media">
+               <a href="https://www.linkedin.com/in/saransh-agrawal8899/"><i class="fa fa-linkedin"></i></a>
+             </div>
+           </div>
+           <h3>Saransh Agarwal</h3>
+           <h5>Electronics Head</h5>
+         </div>
+ 
+         <div class="member">
+           <div class="member_img">
+             <img src="images/team/member6.jpg">
+              <div class="social_media">
+               <a href="https://www.linkedin.com/in/raloue/"><i class="fa fa-linkedin"></i></a>
+             </div>
+           </div>
+           <h3>Raloue Kapoor</h3>
+           <h5>Coding Head</h5>
+         </div>
+ 
+         <div class="member">
+            <div class="member_img">
+              <img src="images/team/member7.jpg">
+               <div class="social_media">
+               <a href="https://www.linkedin.com/company/robotics-and-circuits"><i class="fa fa-linkedin"></i></a>
+             </div>
+           </div>
+           <h3>Eeshan Chowdhary</h3>
+           <h5>Mechanical Head</h5>
+       </div>
+ 
+         <div class="member">
+            <div class="member_img">
+              <img src="images/team/member8.jpg">
+               <div class="social_media">
+               <a href="https://www.linkedin.com/in/gagan-j-50b6aa134/"><i class="fa fa-linkedin"></i></a>
+             </div>
+           </div>
+           <h3>JH Gagan</h3>
+           <h5>Research Head</h5>
+       </div>  
+ 
+         <div class="member">
+            <div class="member_img">
+              <img src="images/team/member9.jpg">
+               <div class="social_media">
+               <a href="https://www.linkedin.com/in/ammaralam221/"><i class="fa fa-linkedin"></i></a>
+             </div>
+           </div>
+            <h3>Ammar Alam Malik</h3>
+           <h5>Advisory Board</h5>
+       </div>  
+ 
+       <div class="member">
+            <div class="member_img">
+              <img src="images/team/member10.jpg">
+               <div class="social_media">
+               <a href="https://www.linkedin.com/company/robotics-and-circuits"><i class="fa fa-linkedin"></i></a>
+             </div>
+           </div>
+           <h3>Tanyeem Saifi</h3>
+           <h5>Advisory Board</h5>
+       </div>  
+ 
+         <div class="member">
+            <div class="member_img">
+              <img src="images/team/member11.jpg">
+               <div class="social_media">
+               <a href="https://www.linkedin.com/in/vishnu-bhargav-82b419175/"><i class="fa fa-linkedin"></i></a>
+             </div>
+           </div>
+           <h3>Vishnu Bharghav</h3>
+           <h5>Advisory Board</h5>
+       </div>  
+ </section>
+ <!-- End Board-->
 
 
 <!--start footer-->
