team list updation

--- a/team.html
+++ b/team.html
@@ -93,7 +93,7 @@
 
         <div class="member">
            <div class="member_img">
-            <img src="images/team/sa.jpeg">
+            <img src="images/team/sa1.jpeg">
               <div class="social_media">
               <a href="https://www.linkedin.com/in/saloni-agarwal-7aa5821a7/"><i class="fa fa-linkedin"></i></a>
             </div>
@@ -106,7 +106,7 @@
           <div class="member_img">
             <img src="images/team/nt.jpeg">
               <div class="social_media">
-              <a href="https://www.linkedin.com/company/robotics-and-circuits"><i class="fa fa-linkedin"></i></a>
+              <a href="https://www.linkedin.com/in/neil-tyrone-pereira-025a751b3/"><i class="fa fa-linkedin"></i></a>
             </div>
           </div>
           <h3>Neil Tyrone</h3>
@@ -126,7 +126,7 @@
 
         <div class="member">
            <div class="member_img">
-            <img src="images/team/bj.jpeg">
+            <img src="images/team/ba1.jpeg">
               <div class="social_media">
               <a href="https://www.linkedin.com/company/robotics-and-circuits"><i class="fa fa-linkedin"></i></a>
             </div>
@@ -200,20 +200,19 @@
        </div>
        <div class="domains" >
           <div class="icon">
-            <i class="fa fa-bar-chart" aria-hidden="true"></i>
+            <i class="fa fa-wrench" aria-hidden="true"></i>
           </div>
           <h5>Mechanical</h5>
           <ul>
             <li>Rishabh Dugar</li>
             <li>Rohan Kumar</li>
-            <li>Shashank Singh</li>
             <li>Hrithik P. Shetty </li>
             <li>Sairaj Nayak </li>
           </ul>
        </div>
          <div class="domains" >
           <div class="icon">
-            <i class="fa fa-wrench" aria-hidden="true"></i>
+            <i class="fa fa-bar-chart" aria-hidden="true"></i>
           </div>
           <h5>Management</h5>
           <ul>
