--- a/vedanthregistration.html
+++ b/vedanthregistration.html
@@ -188,6 +188,7 @@
   var a = document.getElementById("teamsize").value;
   if(a>3){
     alert('Please enter appropriate team Size (1-3)')
+    document.getElementById("teamsize").value=''
   }
   else{
     for (i = 0; i < a; i++) {
