registration youtube link

--- a/vedanthregistration.html
+++ b/vedanthregistration.html
@@ -121,12 +121,12 @@
         <input class="inputbox teamsize" type="phone" id="teamsize"  name="teamsize"  placeholder="Team Size(1-3)" required="required" data-error="Team Size required" oninput="textbox()">
         <div class="help-block with-errors"></div>
     <div id="textboxes"></div>
-        <textarea class="inputbox message" style="resize: none;" id="message" name="message" rows="4" placeholder="Message & Project Details to exhibit" required="required" data-error="Message is required."></textarea>
+        <textarea class="inputbox message" style="resize: none;" id="message" name="message" rows="4" placeholder="Youtube url of the video explaining the project" required="required" data-error="Message is required."></textarea>
     <div class="help-block with-errors"></div>
     <div class="g-recaptcha" data-sitekey="6LfjU9cZAAAAAKC7EFDRkxiqJ1bSppkR9ujr6Ytr" data-theme="light" data-size="normal" data-image="image"></div>
 
    <div>
-    Upload Project Synopsis & Project Video<br />
+    Upload Project Video<br />
     <input type="file" onchange="uploadFile()" id="files" name="files[]" multiple />
 
 </div>
