vedanth internal project display

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <li><a href="#about_us">About Us</a></li>
           <li><a href="#our_work">Our Work</a></li>
           <li><a href="team.html">Team</a></li>
-          <li><a href="vedanthregistration.html">Vedanth</a></li>
+          <li><a href="vedanth.html">Vedanth</a></li>
           <li><a href="project_gallery.html">Projects</a></li>
           <li><a href="#contact">Contact Us</a></li>
         </ul>
@@ -179,7 +179,7 @@
       Vedanth is the annual <b  style="color: #66fcf1">technical exhibition</b> organised by RNC during TechTatva at MIT, Manipal. It is a platform for young minds to showcase their innovative ideas.
     </div>
     <div class="button2" data-aos="zoom-in">
-      <a href="vedanthregistration.html">Know More!</a>
+      <a href="vedanth.html">Know More!</a>
     </div>
   </div>
  </div>
