youtube embed of videos

--- a/vedanth.html
+++ b/vedanth.html
@@ -110,7 +110,7 @@
  <div class="item" id="8">
   <h2 class="animated bounceInLeft delay-4s">Robo-Sphere</h2>
   <p>   </p>
-  <iframe class='sproutvideo-player' src='https://videos.sproutvideo.com/embed/ea9cd7b51b13e1c763/f0b3e717bbe1f4b0' width='315' height='315' frameborder='0' allowfullscreen></iframe>
+  <iframe width="315" height="315" src="https://www.youtube.com/embed/qY1OskaLAkU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   <p class=" vp animated bounceInLeft delay-4s"></p>
   <div class="vbutton animated bounceIn delay-5s">
     Read More
@@ -120,7 +120,7 @@
 <div class="item" id="10">
   <h2 class="animated bounceInLeft delay-4s">SLAM-Nav</h2>
   <p>   </p>
-  <iframe class='sproutvideo-player' src='https://videos.sproutvideo.com/embed/449cd7b51b13e1c9cd/3d0ab1c0e55fc406' width='315' height='315' frameborder='0' allowfullscreen></iframe>
+  <iframe width="315" height="315" src="https://www.youtube.com/embed/2UVt2VMayEI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   <p class=" vp animated bounceInLeft delay-4s"></p>
   <div class="vbutton animated bounceIn delay-5s">
     Read More
@@ -130,7 +130,7 @@
 <div class="item" id="11">
   <h2 class="animated bounceInLeft delay-4s">Navigators</h2>
   <p>   </p>
-  <iframe class='sproutvideo-player' src='https://videos.sproutvideo.com/embed/069cd7b51b13e0c28f/e3026f31df10daf8' width='315' height='315' frameborder='0' allowfullscreen></iframe>
+  <iframe width="315" height="315" src="https://www.youtube.com/embed/t1L6RYsNNf4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   <p class=" vp animated bounceInLeft delay-4s"></p>
   <div class="vbutton animated bounceIn delay-5s">
     Read More
@@ -150,7 +150,7 @@
       <div class="item" id="5">
         <h2 class="animated bounceInLeft delay-4s">University Companion System</h2>
         <p>   </p>
-        <iframe class='sproutvideo-player' src='https://videos.sproutvideo.com/embed/709cd7b5171fe3c7f9/9d7d349b33881245' width='315' height='315' frameborder='0' allowfullscreen></iframe>
+        <iframe width="315" height="315" src="https://www.youtube.com/embed/lv_GVuQyr4M" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <p class=" vp animated bounceInLeft delay-4s"></p>
         <div class="vbutton animated bounceIn delay-5s">
           Read More
@@ -162,7 +162,7 @@
       <div class="item" id="1">
         <h2 class="animated bounceInLeft delay-4s">Mask Detection Crowd Control</h2>
         <p>   </p>
-        <iframe class='sproutvideo-player' src='https://videos.sproutvideo.com/embed/119cd7b5151ce1c998/d19aa65d70c03d63' width='315' height='315' frameborder='0' allowfullscreen></iframe>
+        <iframe width="315" height="315" src="https://www.youtube.com/embed/Px9nk1RtZYI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <p class=" vp animated bounceInLeft delay-4s"></p>
         <div class="vbutton animated bounceIn delay-5s">
           Read More
@@ -182,7 +182,7 @@
       <div class="item" id="6">
         <h2 class="animated bounceInLeft delay-4s">VeCDeRS</h2>
         <p>   </p>
-        <iframe class='sproutvideo-player' src='https://videos.sproutvideo.com/embed/799cd7b5151ce2c2f0/0440286dd86b3dc5' width='315' height='315' frameborder='0' allowfullscreen></iframe>
+        <iframe width="315" height="315" src="https://www.youtube.com/embed/muQM3BA1GYo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <p class=" vp animated bounceInLeft delay-4s"></p>
         <div class="vbutton animated bounceIn delay-5s">
           Read More
@@ -192,7 +192,7 @@
       <div class="item" id="7">
         <h2 class="animated bounceInLeft delay-4s">Non Touch Biometric</h2>
         <p>   </p>
-        <iframe class='sproutvideo-player' src='https://videos.sproutvideo.com/embed/069cd7b51513eac68f/18b2a4dbde5f6a2b' width='315' height='315' frameborder='0' allowfullscreen></iframe>
+        <iframe width="315" height="315" src="https://www.youtube.com/embed/a-0-5ydOXEU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <p class=" vp animated bounceInLeft delay-4s"></p>
         <div class="vbutton animated bounceIn delay-5s">
           Read More
@@ -203,7 +203,7 @@
       <div class="item" id="9">
         <h2 class="animated bounceInLeft delay-4s">Smart Robotic Manipulator</h2>
         <p>   </p>
-        <iframe class='sproutvideo-player' src='https://videos.sproutvideo.com/embed/799cd7b51b13e0c1f0/d53a66ff4107d133' width='315' height='315' frameborder='0' allowfullscreen></iframe>
+        <iframe width="315" height="315" src="https://www.youtube.com/embed/xnbINoJzDFQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <p class=" vp animated bounceInLeft delay-4s"></p>
         <div class="vbutton animated bounceIn delay-5s">
           Read More
