vedanth video updates

--- a/vedanth.html
+++ b/vedanth.html
@@ -140,7 +140,7 @@
 <div class="item" id="2">
   <h2 class="animated bounceInLeft delay-4s">Sentiment Analysis</h2>
   <p>   </p>
-  <iframe class='sproutvideo-player' src='https://videos.sproutvideo.com/embed/ea9cd7b5151ce0c763/2dcdf45658314a8f' width='315' height='315' frameborder='0' allowfullscreen></iframe>
+  <iframe width="315" height="315" src="https://www.youtube.com/embed/uPHHFZAwu4w" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   <p class=" vp animated bounceInLeft delay-4s"> </p>
   <div class="vbutton animated bounceIn delay-5s">
     Read More
@@ -163,16 +163,6 @@
         <h2 class="animated bounceInLeft delay-4s">Mask Detection Crowd Control</h2>
         <p>   </p>
         <iframe width="315" height="315" src="https://www.youtube.com/embed/Px9nk1RtZYI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <p class=" vp animated bounceInLeft delay-4s"></p>
-        <div class="vbutton animated bounceIn delay-5s">
-          Read More
-        </div>
-       
-      </div>
-      <div class="item" id="4">
-        <h2 class="animated bounceInLeft delay-4s">Med -Store </h2>
-        <p>   </p>
-        <iframe class='sproutvideo-player' src='https://videos.sproutvideo.com/embed/709cd7b5151ce7c2f9/5429f2f865aed863' width='315' height='315' frameborder='0' allowfullscreen></iframe>
         <p class=" vp animated bounceInLeft delay-4s"></p>
         <div class="vbutton animated bounceIn delay-5s">
           Read More
