external + internal projects

--- a/vedanthregistration.html
+++ b/vedanthregistration.html
@@ -68,6 +68,10 @@
     <div class="activitiescontent">
         <div class="box">
           <button class="title textcenter" data-aos="zoom-in" type="submit" value="Send"><a href="vedanth.html">View Vedanth 10.0 projects</a><i class="fa fa-paper-plane-o" aria-hidden="true"></i></button>
+          <br>
+          <p>Registration is closed !</p>
+          <br>
+          <br>
           <p>Vedanth 10.0 is the online technical exhibition of TechTatva’20 which will be conducted over a span of 3 days. Teams will present their projects in the form of  descriptive videos in the fields of IOT, machine learning, medical innovation, robotics and automation, technology for social betterment, smart learning and frugal innovation.  Our latest addition is a COVID-19 corner where special emphasis will be given to COVID-19 based projects. 
 
               Winners shall be declared based on the creativity and novelty of the innovation.
@@ -104,7 +108,7 @@
       <h1>Registration</h1>
      </div>
   <div class="row">
-      <p>Sign Up for Vedanth 10.0 and showcase your project now !<br><span style='color: #66fcf1; font-size: 12px;'>&#9679; &#9679; &#9679;</span></p>
+      <p>New Registration is closed for Vedanth 10.0<br><span style='color: #66fcf1; font-size: 12px;'>&#9679; &#9679; &#9679;</span></p>
   </div>
     <div class="row">
     <div class="left">
@@ -238,7 +242,7 @@
 
     //put request upload file to firebase storage
     thisRef.put(file).then(function(snapshot) {
-       alert("File Uploaded !!")
+       alert("Registration is closed !!")
        console.log('Uploaded a blob or file!');
     });
   }
