project gallery vedanth 10.0 added

--- a/vedanth.html
+++ b/vedanth.html
@@ -133,7 +133,7 @@ a:link, a:visited {
 <br>
 
   
-   <div id="btn"><a href="vedanth10.0.html"><span class="noselect">View Vedanth 10.0</span><div id="circle"></div></a>
+   <div id="btn"><a href="project_gallery.html"><span class="noselect">View Vedanth Projects</span><div id="circle"></div></a>
   </div>
   </body>
 </html>
