--- a/index.html
+++ b/index.html
@@ -200,8 +200,8 @@
     <div class="activitiescontent">
         <div class="box">
           <ul>
-            <li>Student Project (Orientation) </li>
-             <p> <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=Qr2-Kf_xPUyWiAZ-NGDcH4VC7OKx2lFGhfIr3y1HvtpUMTE4UzJPNUJLUU85QVlKMElOTjlRWk45SC4u">Register Now!</a></p>
+            <li>Register for Recruitments </li>
+             <p> <a href="https://docs.google.com/forms/d/e/1FAIpQLSesUaoV-mDtJaPvsWo88U3uynmA_VxoyUqb1hKFI9hV6r8IWw/viewform">Register Now!</a></p>
             <li>MicroMouse</li>
              <p> As one of our flagship projects, we are currently designing our own version of the micromouse for the International Micromouse Challenge.</p>
             <li>Vedanth 10.0</li>
