Recruitment Link added

--- a/index.html
+++ b/index.html
@@ -200,8 +200,8 @@
     <div class="activitiescontent">
         <div class="box">
           <ul>
-            <li>Register for Recruitments </li>
-             <p> <a href="https://docs.google.com/forms/d/e/1FAIpQLSesUaoV-mDtJaPvsWo88U3uynmA_VxoyUqb1hKFI9hV6r8IWw/viewform">Register Now!</a></p>
+            <li>RnC Recruitment Test 2020  </li>
+             <p> <a href="https://docs.google.com/forms/d/e/1FAIpQLSfKnvWPYmhNpX1ip3vki9JdEm6_47OfY5jnip5ud8Rt2j356A/viewform">Take the Test Now!</a></p>
             <li>MicroMouse</li>
              <p> As one of our flagship projects, we are currently designing our own version of the micromouse for the International Micromouse Challenge.</p>
             <li>Vedanth 10.0</li>
