--- a/team.html
+++ b/team.html
@@ -23,6 +23,7 @@
   <div class="navbar">
        <ul>
           <li><a href="index.html#home">Home</a></li>
+           <li><a href="index.html#ongoing">Ongoing Activities</a></li>
           <li><a href="index.html#about_us">About Us</a></li>
           <li><a href="index.html#our_work">Our Work</a></li>
           <li><a href="team.html" class="active">Team</a></li>
