rnc rec interview

--- a/index.html
+++ b/index.html
@@ -212,9 +212,8 @@ class="activities">
     <div class="activitiescontent">
         <div class="box">
           <ul>
-            <li>RnC Recruitment Test 2020  </li>
-             <p> <a href="https://docs.google.com/forms/d/e/1FAIpQLSfKnvWPYmhNpX1ip3vki9JdEm6_47OfY5jnip5ud8Rt2j356A/viewform">Take the Test Now!</a></p>
-<p>The Test Link will be available till 27th November 2020</p>
+            <li>RnC Recruitment 2020  </li>
+		<p>Interview Round</p>
             <li>MicroMouse</li>
              <p> As one of our flagship projects, we are currently designing our own version of the micromouse for the International Micromouse Challenge.</p>
             <li>Vedanth 10.0</li>
