--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ class="activities">
         <div class="box">
           <ul>
             <li>RnC Recruitment 2020  </li>
-		<p>Interview Round</p>
+		<p>Task Phase</p>
             <li>MicroMouse</li>
              <p> As one of our flagship projects, we are currently designing our own version of the micromouse for the International Micromouse Challenge.</p>
             <li>Vedanth 10.0</li>
