project gallery updated

--- a/project_gallery.html
+++ b/project_gallery.html
@@ -87,7 +87,7 @@
   </div>
  
 </div>
-<div class="item" id="11">
+<!--<div class="item" id="11">
   <h2 class="animated bounceInLeft delay-4s">Navigators</h2>
   <p>   </p>
   <iframe width="315" height="315" src="https://www.youtube.com/embed/t1L6RYsNNf4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -96,7 +96,7 @@
     Read More
   </div>
  
-</div>
+</div>!--->
 <div class="item" id="2">
   <h2 class="animated bounceInLeft delay-4s">Sentiment Analysis</h2>
   <p>   </p>
