second year recruitment update

--- a/index.html
+++ b/index.html
@@ -212,10 +212,14 @@ class="activities">
     <div class="activitiescontent">
         <div class="box">
           <ul>
+            <li>RNC Recruitment </li>
+	    <p>Now recruiting 2nd years !  </p>
+	   <p>Last date to apply : 9th October 11:59pm</p>
+	    <p><a href="https://forms.gle/FTGAXg8jDAQnXs6q8">Registration Link</a></p>
             <li>MicroMouse</li>
              <p> As one of our flagship projects, we are currently designing our own version of the micromouse for the International Micromouse Challenge.</p>
-            <li>Vedanth 10.0</li>
-            <p>Due to Covid-19 pandemic Vedanth 10.0 will be a virtual exhibition this year. We have 8 ongoing projects within the team.</p>
+            <li>Vedanth </li>
+            <p> We have 8 ongoing projects within the team. To view past Vedanth Projects :  <a href="vedanth.html">Click here</a></p>
             <li>ROS Training</li>
             <p> ROS for Beginners. Open to all MIT,Manipal students. Click <a href="https://github.com/RNCManipal/ROS_for_Beginners">here</a> to know more.</p>
           </ul>
