--- a/index.html
+++ b/index.html
@@ -216,12 +216,13 @@ class="activities">
 	    <p>Now recruiting 2nd years !  </p>
 	   <p>Last date to apply : 9th October 11:59pm</p>
 	    <p><a href="https://forms.gle/FTGAXg8jDAQnXs6q8">Registration Link</a></p>
-            <li>MicroMouse</li>
-             <p> As one of our flagship projects, we are currently designing our own version of the micromouse for the International Micromouse Challenge.</p>
-            <li>Vedanth </li>
-            <p> We have 8 ongoing projects within the team. To view past Vedanth Projects :  <a href="vedanth.html">Click here</a></p>
-            <li>ROS Training</li>
-            <p> ROS for Beginners. Open to all MIT,Manipal students. Click <a href="https://github.com/RNCManipal/ROS_for_Beginners">here</a> to know more.</p>
+        <!---    <li>MicroMouse</li>
+             <p> As one of our flagship projects, we are currently designing our own version of the micromouse for the International Micromouse Challenge.</p> !--->
+            <li>Vedanth 11.0</li>
+            <p>Coming Soon</p>
+<p>To view past Vedanth Projects :  <a href="project_gallery.html">Click here</a></p>
+          <!--  <li>ROS Training</li>
+            <p> ROS for Beginners. Open to all MIT,Manipal students. Click <a href="https://github.com/RNCManipal/ROS_for_Beginners">here</a> to know more.</p>  !-->
           </ul>
         </div>
      </div>
