--- a/index.html
+++ b/index.html
@@ -63,6 +63,11 @@
 </dialog> !--->
         <h1>Robotics and Circuits</h1>
         <h4>Manipal Institute of Technology, Manipal</h4>
+	  <div class="row">
+        <div class="typewriter">
+         <h6>Now Recruiting !</h6>
+        </div>
+        </div>
         <div class="button1">
           <a href="project_gallery.html">Projects</a>
         </div>
@@ -215,7 +220,9 @@ class="activities">
             <li>RNC Recruitment </li>
 	    <p>Now recruiting 2nd years !  </p>
 	   <p>Last date to apply : 9th October 11:59pm</p>
-	    <p><a href="https://forms.gle/FTGAXg8jDAQnXs6q8">Registration Link</a></p>
+
+		>>&nbsp> <button class="button1" data-aos="zoom-in"><a href="https://forms.gle/FTGAXg8jDAQnXs6q8">Registration Link</a> <i class="fa fa-external-link" aria-hidden="true"></i></button><&nbsp<<
+	    <p></p>
         <!---    <li>MicroMouse</li>
              <p> As one of our flagship projects, we are currently designing our own version of the micromouse for the International Micromouse Challenge.</p> !--->
             <li>Vedanth 11.0</li>
