--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ class="activities">
 	    <p>Now recruiting 2nd years !  </p>
 	   <p>Last date to apply : 9th October 11:59pm</p>
 
-		>>&nbsp> <button class="button1" data-aos="zoom-in"><a href="https://forms.gle/FTGAXg8jDAQnXs6q8">Registration Link</a> <i class="fa fa-external-link" aria-hidden="true"></i></button><&nbsp<<
+		>>&nbsp <button class="button1" data-aos="zoom-in"><a href="https://forms.gle/FTGAXg8jDAQnXs6q8">Registration Link</a> <i class="fa fa-external-link" aria-hidden="true"></i></button>&nbsp<<
 	    <p></p>
         <!---    <li>MicroMouse</li>
              <p> As one of our flagship projects, we are currently designing our own version of the micromouse for the International Micromouse Challenge.</p> !--->
